<resources>
    <string name="app_name">ImportantDates</string>

    <!--Registration-->
    <!--Login-->
    <string name="login_email">قم بتسجيل الدخول الآن عن طريق البريد الالكتروني</string>
    <string name="email">البريد الالكتروني</string>
    <string name="password">كلمة المرور</string>
    <string name="remember_me">تذكرني</string>
    <string name="forget_password">نسيت كلمة المرور ؟</string>
    <string name="login">تسجيل الدخول</string>
    <string name="dont_have_account">لا يوجد لديك حساب ؟</string>
    <string name="create_account">انشاء حساب جديد</string>
    <!--Forget password-->
    <string name="forget">نسيت كلمة المرور</string>
    <string name="forget_txt">لاستعادة كلمة المرور الخاصة بك, تحتاج الى ادخال عنوان بريدك الالكترونى المسجل, وسوف نرسل لك رمز الاسترداد الى البريد الالكترونى الخاص بك</string>
    <string name="send">ارسال</string>
    <string name="code">كود الاسترجاع</string>
    <string name="enter_code">ادخل رمز الاسترداد الذي تلقيته بتاريخ بريدك المسجل</string>
    <string name="resend">اعادة الارسال</string>
    <!--Signup-->
    <string name="new_user">تسجيل جديد</string>
    <string name="enter_correct_data">من فضلك قم بادخال البيانات الآتية والتأكد من صحتها</string>
    <string name="phone">رقم الجوال</string>
    <string name="username">الاسم بالكامل</string>
    <string name="enter_username">ادخل الاسم بالكامل</string>
    <string name="enter_phone">ادخل رقم الجوال</string>
    <string name="enter_email">ادخل البريد الالكتروني</string>
    <string name="enter_password">ادخل كلمة المرور</string>
    <string name="confirm_password">تأكيد كلمة المرور</string>
    <string name="register_now">تسجيل الان</string>
    <string name="already_have_account">لديك حساب بالفعل ؟</string>
    <string name="correct_data">تم ادخال البيانات كاملة بنجاح</string>
    <string name="signup_continue">استمرار</string>
    <string name="review">رجوع لمراجعة البيانات</string>

    <!--Main-->
    <string name="main_txt">مفكرة عن الاحداث المهمة التي يجب عليك تذكرها</string>
    <string name="attention">تنبيه بادخال البيانات الآتية كاملة بشكل صحيح</string>
    <string name="wife_data">بيانات الزوجة</string>
    <string name="personal_data">بيانات شخصية</string>
    <string name="serant_data">بيانات الخادمة</string>
    <string name="kid_data">بيانات الأبناء</string>

</resources>
