<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.registration.signup.SignupActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--Header-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header_layout"
            android:background="@mipmap/top_header"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="150dp"/>
        <ImageView
            android:id="@+id/back"
            android:src="@mipmap/back"
            android:padding="15dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="60dp"
            android:layout_height="60dp"/>
        <TextView
            android:id="@+id/signup_new_tv"
            android:text="@string/new_user"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="21sp"
            app:layout_constraintTop_toTopOf="@id/back"
            app:layout_constraintBottom_toBottomOf="@id/back"
            app:layout_constraintEnd_toStartOf="@id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/signup_txt"
            android:text="@string/enter_correct_data"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="21sp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/header_layout"
            android:layout_width="300dp"
            android:layout_height="wrap_content"/>

        <!--Username-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/signup_username_layout"
            android:background="@drawable/not_active_edittext_background"
            app:layout_constraintTop_toBottomOf="@id/header_layout"
            android:layout_marginTop="26sp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/signup_username_img"
                android:src="@mipmap/user"
                android:padding="15dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="50dp"
                android:layout_height="match_parent"/>

            <EditText
                android:id="@+id/signup_username_et"
                android:background="@color/transparent"
                android:hint="@string/enter_username"
                android:inputType="textEmailAddress"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                app:layout_constraintEnd_toStartOf="@id/signup_username_img"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
        <TextView
            android:id="@+id/signup_username_txt"
            android:text="@string/username"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:padding="8dp"
            android:background="@color/white"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="@id/signup_username_layout"
            app:layout_constraintTop_toBottomOf="@id/signup_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!--Email-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/signup_email_layout"
            android:background="@drawable/not_active_edittext_background"
            app:layout_constraintTop_toBottomOf="@id/signup_username_layout"
            android:layout_marginTop="26sp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/signup_email_img"
                android:src="@mipmap/email"
                android:padding="15dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="50dp"
                android:layout_height="match_parent"/>

            <EditText
                android:id="@+id/signup_mail_et"
                android:background="@color/transparent"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                app:layout_constraintEnd_toStartOf="@id/signup_email_img"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
        <TextView
            android:id="@+id/signup_email_txt"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:padding="8dp"
            android:background="@color/white"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="@id/signup_username_layout"
            app:layout_constraintTop_toBottomOf="@id/signup_username_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!--Phone-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/signup_phone_layout"
            android:background="@drawable/not_active_edittext_background"
            app:layout_constraintTop_toBottomOf="@id/signup_email_layout"
            android:layout_marginTop="26sp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/signup_phone_img"
                android:src="@mipmap/call"
                android:padding="15dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="50dp"
                android:layout_height="match_parent"/>

            <EditText
                android:id="@+id/signup_phone_et"
                android:background="@color/transparent"
                android:hint="@string/enter_phone"
                android:inputType="number"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                app:layout_constraintEnd_toStartOf="@id/signup_phone_img"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
        <TextView
            android:id="@+id/signup_phone_txt"
            android:text="@string/phone"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:padding="8dp"
            android:background="@color/white"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="@id/signup_email_layout"
            app:layout_constraintTop_toBottomOf="@id/signup_email_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!--Password-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/signup_password_layout"
            android:background="@drawable/not_active_edittext_background"
            app:layout_constraintTop_toBottomOf="@id/signup_phone_layout"
            app:layout_constraintStart_toStartOf="@id/signup_phone_layout"
            app:layout_constraintEnd_toEndOf="@id/signup_phone_layout"
            android:layout_marginTop="32dp"
            android:layout_width="0dp"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/signup_password_img"
                android:src="@mipmap/password"
                android:padding="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_width="50dp"
                android:layout_height="match_parent"/>

            <EditText
                android:id="@+id/signup_password_et"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:gravity="end|center"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:background="@color/transparent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/signup_password_img"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
        <TextView
            android:id="@+id/signup_password"
            android:text="@string/password"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:background="@color/white"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/signup_phone_layout"
            app:layout_constraintEnd_toEndOf="@id/signup_phone_layout"
            android:padding="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!--Confirm password-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/signup_confirm_password_layout"
            android:background="@drawable/not_active_edittext_background"
            app:layout_constraintTop_toBottomOf="@id/signup_password_layout"
            app:layout_constraintStart_toStartOf="@id/signup_password_layout"
            app:layout_constraintEnd_toEndOf="@id/signup_password_layout"
            android:layout_marginTop="32dp"
            android:layout_width="0dp"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/signup_confrim_password_img"
                android:src="@mipmap/password"
                android:padding="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_width="50dp"
                android:layout_height="match_parent"/>

            <EditText
                android:id="@+id/signup_confirm_password_et"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:gravity="end|center"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:background="@color/transparent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/signup_confrim_password_img"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
        <TextView
            android:id="@+id/signup_confirm_password"
            android:text="@string/confirm_password"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:background="@color/white"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/signup_password_layout"
            app:layout_constraintEnd_toEndOf="@id/signup_password_layout"
            android:padding="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/signup_btn"
            android:text="@string/register_now"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/button_background"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/signup_confirm_password_layout"
            app:layout_constraintStart_toStartOf="@id/signup_confirm_password_layout"
            app:layout_constraintEnd_toEndOf="@id/signup_confirm_password_layout"
            android:layout_width="0dp"
            android:layout_height="50dp"/>

        <!--Login-->
        <LinearLayout
            android:id="@+id/login_layout"
            app:layout_constraintTop_toBottomOf="@id/signup_btn"
            app:layout_constraintStart_toStartOf="@id/signup_btn"
            app:layout_constraintEnd_toEndOf="@id/signup_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            android:padding="8dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/login"
                android:textStyle="bold"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:textColor="@color/placeholder_red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/already_have_account"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>