<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/splash"
    tools:context=".view.registration.login.LoginActivity">

    <ImageView
        android:src="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/sroll_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="150dp"
        android:layout_height="150dp"/>

    <ScrollView
        android:id="@+id/sroll_view"
        android:background="@drawable/rounded_top"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--<ImageView
                android:scaleType="fitXY"
                android:src="@mipmap/login_bottom"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>-->

            <TextView
                android:id="@+id/login_email_tv"
                android:text="@string/login_email"
                android:textColor="@color/black"
                android:textSize="21sp"
                android:gravity="center"
                android:layout_marginStart="64dp"
                android:layout_marginEnd="64dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="32dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <!--Email-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/login_email_layout"
                android:background="@drawable/not_active_edittext_background"
                app:layout_constraintTop_toBottomOf="@id/login_email_tv"
                android:layout_marginTop="26sp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <ImageView
                    android:id="@+id/login_email_img"
                    android:src="@mipmap/email"
                    android:padding="15dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"/>

                <EditText
                    android:id="@+id/login_mail_et"
                    android:background="@color/transparent"
                    android:hint="@string/enter_email"
                    android:inputType="textEmailAddress"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    app:layout_constraintEnd_toStartOf="@id/login_email_img"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"/>


            </androidx.constraintlayout.widget.ConstraintLayout>
            <TextView
                android:id="@+id/login_email_txt"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:padding="8dp"
                android:background="@color/white"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="@id/login_email_layout"
                app:layout_constraintTop_toBottomOf="@id/login_email_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <!--Password-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/login_password_layout"
                android:background="@drawable/not_active_edittext_background"
                app:layout_constraintTop_toBottomOf="@id/login_email_layout"
                app:layout_constraintStart_toStartOf="@id/login_email_layout"
                app:layout_constraintEnd_toEndOf="@id/login_email_layout"
                android:layout_marginTop="32dp"
                android:layout_width="0dp"
                android:layout_height="50dp">

                <ImageView
                    android:id="@+id/login_password_img"
                    android:src="@mipmap/password"
                    android:padding="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"/>

                <EditText
                    android:id="@+id/login_password_et"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"
                    android:gravity="end|center"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    android:background="@color/transparent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/login_password_img"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
            <TextView
                android:id="@+id/login_password"
                android:text="@string/password"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:background="@color/white"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@id/login_email_layout"
                app:layout_constraintEnd_toEndOf="@id/login_password_layout"
                android:padding="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <!--Remember me-->
            <CheckBox
                android:id="@+id/login_remember_me_checkbox"
                app:layout_constraintTop_toBottomOf="@id/login_password_layout"
                app:layout_constraintEnd_toEndOf="@id/login_password_layout"
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/remember_me"
                android:textColor="@color/black"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="@id/login_remember_me_checkbox"
                app:layout_constraintBottom_toBottomOf="@id/login_remember_me_checkbox"
                app:layout_constraintEnd_toStartOf="@id/login_remember_me_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <!--Forget password-->
            <TextView
                android:id="@+id/login_forget_password"
                android:text="@string/forget_password"
                android:textColor="@color/placeholder_red"
                app:layout_constraintTop_toBottomOf="@id/login_password_layout"
                app:layout_constraintStart_toStartOf="@id/login_password_layout"
                android:padding="8dp"
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <!--Login-->
            <Button
                android:id="@+id/login_btn"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@drawable/button_background"
                android:layout_margin="16dp"
                app:layout_constraintTop_toBottomOf="@id/login_forget_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"/>

            <!--Create account-->
            <LinearLayout
                android:id="@+id/login_create_account_layout"
                app:layout_constraintTop_toBottomOf="@id/login_btn"
                app:layout_constraintStart_toStartOf="@id/login_btn"
                app:layout_constraintEnd_toEndOf="@id/login_btn"
                app:layout_constraintBottom_toBottomOf="parent"
                android:padding="8dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/create_account"
                    android:textStyle="bold"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:textColor="@color/placeholder_red"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:text="@string/dont_have_account"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


            </LinearLayout>

            <ProgressBar
                android:id="@+id/loading"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>