<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/rounded_blue"
    tools:context=".view.registration.signup.SignupSuccessFragment">

    <ImageView
        android:id="@+id/close"
        android:src="@mipmap/close"
        android:padding="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="60dp"
        android:layout_height="60dp"/>

    <ImageView
        android:id="@+id/success_img"
        android:src="@mipmap/success"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="100dp"
        android:layout_height="100dp"/>

    <TextView
        android:id="@+id/success_tv"
        android:text="@string/correct_data"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        app:layout_constraintTop_toBottomOf="@id/success_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/continue_btn"
        android:text="@string/signup_continue"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:background="@drawable/white_btn_background"
        app:layout_constraintTop_toBottomOf="@id/success_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        android:layout_width="0dp"
        android:layout_height="50dp"/>

    <TextView
        android:text="@string/review"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/continue_btn"
        app:layout_constraintStart_toStartOf="@id/continue_btn"
        app:layout_constraintEnd_toEndOf="@id/continue_btn"
        android:id="@+id/back_tv"
        android:padding="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>