<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="16dp"
    android:background="@drawable/rounded_blue"
    tools:context=".view.registration.login.VerificationCodeFragment">

    <ImageView
        android:id="@+id/close"
        android:src="@mipmap/close"
        android:padding="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="60dp"
        android:layout_height="60dp"/>

    <ImageView
        android:id="@+id/pass_code_img"
        android:src="@mipmap/pass_code"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="100dp"
        android:layout_height="100dp"/>

    <TextView
        android:id="@+id/code_tv"
        android:text="@string/code"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/pass_code_img"
        app:layout_constraintStart_toStartOf="@id/pass_code_img"
        app:layout_constraintEnd_toEndOf="@id/pass_code_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/code_txt"
        android:text="@string/enter_code"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:layout_marginStart="64dp"
        app:layout_constraintTop_toBottomOf="@id/code_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <com.goodiebag.pinview.Pinview
        android:id="@+id/code_pin_view"
        app:layout_constraintTop_toBottomOf="@id/code_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:inputType="number"
        app:forceKeyboard="true"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"/>

    <TextView
        android:id="@+id/resend_code"
        android:text="@string/resend"
        android:textColor="@color/white"
        android:padding="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/code_pin_view"
        app:layout_constraintEnd_toEndOf="@id/code_pin_view"
        app:layout_constraintStart_toStartOf="@id/code_pin_view"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>